# Esp32Project

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  partitions.csv  platformio.ini  sdkconfig.esp32dev
.piohome/: appstate.json
.piohome/.cache/: telemetry.json
apps/radio_monitor/: CMakeLists.txt  radio_monitor.cpp  radio_monitor.h
components/brl/: CMakeLists.txt
components/brl/drivers/: CMakeLists.txt  library.json
components/brl/drivers/battery/: bq25898.c  bq25898.h  bq27220.c  bq27220.h
components/brl/drivers/cc1101/: cc1101_wrapper.c  cc1101_wrapper.h
components/brl/drivers/display/: st7789.c  st7789.h
components/brl/drivers/include/: SK6805.c  SK6805.h  board_config.h  cc1101_reg.h
components/brl/drivers/led/: ws2812.c  ws2812.h
components/brl/drivers/subghz/: subghz_file_encoder_worker.c  subghz_setting.c
components/brl/drivers/subghz/include/: constants.h  environment.h  keystore.h  protocol_analyzer.h  receiver.h  transmitter.h
components/brl/drivers/subghz/protocols/: alutech_at_4n.c  bin_raw.c  came_atomo.c  hay21.c  hollarm.c  honeywell.h  keeloq.c  marantec.c  marantec24.c  nero_radio.c  nice_flor_s.c  protocol_items.c  protocol_items.h  public_api.h  secplus_v1.c  star_line.c
components/brl/include/: app_manager.h  app_registry.h  event_bus.h  iapp.h  idriver.h  resource_manager.h
components/brl/src/: app_manager.cpp  app_registry.cpp  event_bus.cpp  resource_manager.cpp
components/drivers/: CMakeLists.txt
components/drivers/src/: cc1101_driver.cpp  subghz_environment.c  subghz_receiver.c  subghz_transmitter.c
components/gui/: CMakeLists.txt  idf_component.yml  library.json
components/gui/lvgl_component/: gui_task.cpp
core/record/include/rf_record/: codec.h  record.h
core/record/src/: codec.c  record.c
core/subghz_core/include/subghz_core/: detector.h  types.h
core/subghz_core/src/: detector.c
core/subghz_legacy/: README.md  receiver.c  subghz_file_encoder_worker.c  subghz_file_encoder_worker.h  subghz_keystore.c  subghz_keystore.h  subghz_keystore_i.h  types.h
core/subghz_legacy/compat/: furi.h  furi_hal.h  furi_hal_rtc.h  m-array.h
core/subghz_legacy/compat/flipper_format/: flipper_format.h  flipper_format_i.h
core/subghz_legacy/compat/lib/flipper_format/: flipper_format.h  flipper_format_i.h
core/subghz_legacy/compat/lib/toolbox/: float_tools.h
core/subghz_legacy/compat/lib/toolbox/stream/: stream.h
core/subghz_legacy/compat/src/: flipper_format_stub.c  furi_compat.c
core/subghz_legacy/compat/storage/: storage.h
core/subghz_legacy/compat/toolbox/: hex.h
core/subghz_legacy/compat/toolbox/stream/: stream.h
core/subghz_legacy/protocols/: bin_raw.c  dickert_mahs.c  faac_slh.c  feron.c  gangqi.c  honeywell.c  honeywell.h  honeywell_wdb.c  kia.c  kinggates_stylo_4k.c  legrand.c  linear.c  magellan.c  phoenix_v2.c  princeton.c  raw.c  scher_khan.c  somfy_keytis.c  somfy_telis.c
core/subghz_legacy_bridge/include/subghz_legacy_bridge/: bridge.h
core/subghz_legacy_bridge/src/: bridge.c
docs/: API.md  BOARD_EVIL_CROW_RF_V2.md  ESP32_CC1101_BRINGUP.md  LEGACY_PROTOCOL_PORT.md  PROTOCOL_CATALOG.md  PROTOCOL_INTEGRATION_FLOW.md  QUICKSTART.md  RECORD_SPEC.md  TECHNICAL.md  evil_crow_rf_v2_reference.md
firmware/cli/: mvp_firmware_cli.c  profile_store.c
include/rf/: profile_store.h  storage.h  storage_platform.h
main/: CMakeLists.txt  main.cpp
mvp/: CMakeLists.txt
mvp/build_hacking/: CMakeCache.txt  Makefile  cmake_install.cmake  rf_client  rf_firmware_cli
mvp/build_ninja/: CMakeCache.txt
platform/common/include/rf_platform/: board.h  cc1101_hal.h  radio_hal.h
platform/esp32/boards/evil_crow_rf_v2/: board.h
platform/esp32/include/rf_platform/: radio_hal_esp32.h
platform/esp32/src/: board.c  cc1101_hal_esp32.c  radio_hal_esp32.c  storage_sd_stub.c
platform/linux/include/rf_platform/: radio_hal_linux.h
platform/linux/src/: cc1101_hal_linux.c  radio_hal_linux.c  storage_fs.c
profiles/: default_profiles.csv
scripts/: sync_subghz_legacy.sh
src/: main.cpp
tools/client/src/: rf_client.c
